zeta-code/tui/src/app/snapshots/zeta_tui__app__mode_tests__clipboard_result_belongs_to_new_task_draft.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  ≡ .                                             
                                                  
  ╭────────────────────────────────────────────╮  
  │                                            │  
  │  Zeta Code v0.1.0                          │  
  │  Resume session                            │  
  │  Manage sessions                           │  
  │  Settings                                  │  
  │  Help and shortcuts                        │  
  ╰────────────────────────────────────────────╯  
  Type a new task · Tab actions · Esc return      
  ╭────────────────────────────────────────────╮  
  │ > new task [Image #1]                      │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Enter send                ⏸ ask permissions on
