zeta-code/tui/src/app/snapshots/zeta_tui__app__mode_tests__fullscreen_detail_is_not_replaced_by_inline_detail.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  ≡ .                                             
                                                  
  ┌── Fullscreen detail ───────────────────[X]─┐  
  │                                            │  
  │  Text: full detail                         │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │  ↑/↓ scroll  ·  Esc to close               │  
  └────────────────────────────────────────────┘
