zeta-code/tui/src/app/snapshots/zeta_tui__app__mode_tests__fullscreen_issues_receive_own_result.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  Home  .                                         
                                                  
─ Issues ─────────────────────────────────────────
                                                  
   Open    Closed                                 
  ╭────────────────────────────────────────────╮  
  │ Search keywords or #number                 │  
  ╰────────────────────────────────────────────╯  
   · 0 selected · 0 loaded ·                      
  FULL-ISSUE-ERROR                                
                                                  
                                                  
                                                  
                                                  
                                                  
  Tab state · Enter details · Space select
