zeta-code/tui/src/app/snapshots/zeta_tui__app__mode_tests__fullscreen_manager_own_selection.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  Home  .                                         
                                                  
  Idle (2)                                        
  ○ first session                                 
> ○ second session                                
  Archived (0)                                    
                                                  
                                                  
                                                  
                                                  
  ╭──────────────────────────────────────────────╮
> │                                              │
  ╰──────────────────────────── Automatic model ─╯
                                                  
                                                  
  Enter to open · Space to preview
