zeta-code/tui/src/app/snapshots/zeta_tui__app__mode_tests__fullscreen_preview_receives_own_reply.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  ≡ .                                             
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
fullscreen preview failed                         
  Preview · first session · read only             
  Esc to close
