zeta-code/tui/src/app/snapshots/zeta_tui__app__mode_tests__home_draft_is_separate_from_current_conversation.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  Home  .                                         
                                                  
  ╭────────────────────────────────────────────╮  
  │                                            │  
  │  Zeta Code v0.1.0                          │  
  │  Resume session                            │  
  │  Manage sessions                           │  
  │  Settings                                  │  
  ╰────────────────────────────────────────────╯  
  Type a new task · Tab actions · Esc return      
  ╭──────────────────────────────────────────────╮
> │new task draft                                │
  ╰──────────────────────────── Automatic model ─╯
                                                  
  ⏸ ask permissions on                            
  Enter send  ·  Tab actions  ·  / commands
