zeta-code/tui/src/app/snapshots/zeta_tui__app__mode_tests__inline_draft_after_panel_dismissed.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
assertion_line: 111
expression: render(&app)
---
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
──────────────────────────────────────────────────
> keep editing this draft                         
──────────────────────────────────────────────────
                                                  
  ⏸ ask permissions on
